export enum OperationType{
    ERROR,
    SUM
}