export interface Payload{
    number1: number, 
    number2: number, 
    operation: string
}